--- a/template.html
+++ b/template.html
@@ -28,10 +28,10 @@
 <body>
 
 
-<div class="banner">
-  <div class="banner-bar">
+<div class="banner" id="top">
 
-  </div>
+  <div class="banner-bar"></div>
+
   <div class="row">
     <div class="col-sm" id="bannerImg1">
       <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:250px" alt="BRM Contractors Inc">
@@ -44,13 +44,13 @@
 
 </div>
 
-<div class="nav-bar" id="navBar">
+<div class="nav-bar row" id="navBar">
  
   <nav class="navbar navbar-expand-lg navbar-light bg-main">
     <a class="navbar-brand" href="#">
       <img class="ms-2 rounded" src="assets/logo/brm-ico.png" alt="BRM">
     </a>
-    <a class="navbar-toggler me-2 " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="menu-icon" onclick="iconSwap(this)">
         <div class="menu-icon">
           <div class="bar1"></div>
@@ -97,7 +97,7 @@
 
 </div> 
 
-<div class="wrapper">
+<div class="wrapper row">
  <!-- ============= HERO ==================== -->
   <section id="hero">
     <div class="hero-container">
@@ -107,13 +107,29 @@
     </div>
   </section>
  <!-- ============= HERO END// ============== -->
-
-
-
-
 </div>
 
-<div class="footer"></div>
+
+<footer class="footer">
+  <div class="container-fluid bg-dark">
+    <div class="row justify-content-center">
+      <div class="col-8">
+        <p class="py-2 text-warning text-uppercase">Phone: 724.787.3758</p>
+      </div>
+      <div class="col-2">
+        <a href="#top" class="btn btn-sm btn-outline-warning mt-2">TOP</a>
+      </div>
+    </div>
+  </div>
+
+
+
+</footer>
+
+
+
+  
+</div>
 
 
 
