--- a/template.html
+++ b/template.html
@@ -32,7 +32,7 @@
 
   <div class="banner-bar"></div>
 
-  <div class="row">
+  <div class="container-fluid row">
     <div class="col-sm" id="bannerImg1">
       <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:250px" alt="BRM Contractors Inc">
     </div>
@@ -44,7 +44,7 @@
 
 </div>
 
-<div class="nav-bar row" id="navBar">
+<div class="nav-bar col-12" id="navBar">
  
   <nav class="navbar navbar-expand-lg navbar-light bg-main">
     <a class="navbar-brand" href="#">
@@ -114,7 +114,7 @@
   <div class="container-fluid bg-dark">
     <div class="row justify-content-center">
       <div class="col-8">
-        <p class="py-2 text-warning text-uppercase">Phone: 724.787.3758</p>
+        <p class="py-2 text-warning text-uppercase text-elite">Phone: 724.787.3758</p>
       </div>
       <div class="col-2">
         <a href="#top" class="btn btn-sm btn-outline-warning mt-2">TOP</a>
