--- a/template.html
+++ b/template.html
@@ -1,10 +1,12 @@
+<!-- site under construction brian mcgee  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Site</title>
+<title>--BRM</title>
+<link rel="icon" href="assets/logo/brm-ico.png" sizes="32x32" />
 
 <!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -14,24 +16,16 @@
 <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-
-<link rel="stylesheet" href="temp.css">
-<link rel="stylesheet" href="css/hero-main.css">
-
-
-
-
-
+<!-- local style sheet  -->
+<link rel="stylesheet" href="css/temp.css">
 
 
 </head>
 <body>
 
-
+<!-- ============ BANNER ============= -->
 <div class="banner" id="top">
-
   <div class="banner-bar"></div>
-
   <div class="container-fluid row">
     <div class="col-sm" id="bannerImg1">
       <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:250px" alt="BRM Contractors Inc">
@@ -40,12 +34,12 @@
       <img class="rounded mx-auto d-block" src="assets/logo/free-estimate.png" style="width:250px" alt="Free Estimate by BRM">
     </div>
   </div>
-
-
 </div>
+<!-- =========== BANNER END/ ========== -->
 
+<!-- ============ NAV-BAR ============= -->
 <div class="nav-bar col-12" id="navBar">
- 
+  <!-- =========  NAVBAR ==========  -->
   <nav class="navbar navbar-expand-lg navbar-light bg-main">
     <a class="navbar-brand" href="#">
       <img class="ms-2 rounded" src="assets/logo/brm-ico.png" alt="BRM">
@@ -66,12 +60,12 @@
           <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#about.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             About Us
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">About BRM</a>
-            <a class="dropdown-item" href="#">Contact Info</a>
+            <a class="dropdown-item" href="about.html">About BRM</a>
+            <a class="dropdown-item" href="contacts.html">Contact Info</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -90,90 +84,59 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="contacts.html">Contact Us</a>
         </li>
     </div>
   </nav>
-
+  <!-- =========  NAVBAR/END =========  -->
 </div> 
+<!-- =========== NAV-BAR END/========== -->
 
+<!-- ============ WRAPPER ============= -->
 <div class="wrapper row">
- <!-- ============= HERO ==================== -->
-  <!-- <section id="hero">
-    <div class="hero-container">
-      <h1>EXCELLENT CHOICE MAINTENANCE AND REPAIR SOLUTIONS</h1>
-      <h2>Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
-      <a href="contacts.html" class="btn-get-started scrollto text-decoration">Connect with BRM</a>
+
+ 
+ <!-- <div class="masthead container-fluid">
+   <div class="masthead-container">
+    <h2>Total service</h2>
+    <h1>Excellent Choice Home Repair</h1>
+    <h2>Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
+    <a href="#contacts.html" class="btn-outline-red">FREE ESTIMATE</a>
+    <div class="block-text">
+      <p>Quality home repair</p>
     </div>
-  </section> -->
- <!-- ============= HERO END// ============== -->
-</div>
+  </div>
+ </div>
+</div> -->
+<!-- =========== WRAPPER END/========== -->
 
-
+<!-- ============ FOOTER ============= -->
 <footer class="footer">
   <div class="container-fluid bg-dark">
     <div class="row justify-content-center">
-      <div class="col-8">
-        <p class="py-2 text-warning text-uppercase text-elite">Phone: 724.787.3758</p>
-      </div>
-      <div class="col-2">
-        <a href="#top" class="btn btn-sm btn-outline-warning mt-2">TOP</a>
+      <div class="text-center">
+        <p class="py-2 h5 text-warning text-uppercase text-elite">Call today 724.787.3758</p>
       </div>
     </div>
   </div>
-
-
-
 </footer>
-
+<!-- =========== FOOTER END/========== -->
 
 
   
-</div>
 
 
 
 
 
+
+
+<script src="js/main.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<!-- ======= FIXED NAVBAR AT BANNER HEIGHT ========= -->
-<script>
 
-  document.addEventListener("DOMContentLoaded", function(){
-      
-      window.addEventListener('scroll', function() {
-
-        let bannerHeight = document.querySelector('.banner').offsetHeight;
-                //fixes navBar at banner height
-        if (window.scrollY > bannerHeight) {
-          document.getElementById('navBar').classList.add('fixed-top');
-                // add padding top to show content behind navbar
-          let navBarHeight = document.querySelector('.nav-bar').offsetHeight;
-          document.body.style.paddingTop = (navBarHeight - 3) + 'px';
-        } else {
-          document.getElementById('navBar').classList.remove('fixed-top');
-                // remove padding top from body
-          document.body.style.paddingTop = '0';
-        } 
-      });
-    }); 
-</script>
-<!-- ======= FIXED NAVBAR AT BANNER HEIGHT END//==== -->
-
-<!-- ============== RESPONSIVE NAVBAR ============= -->
-
-<!-- =============== MENU ICON ================== -->
-<script>
-
-    function iconSwap(x) {
-      x.classList.toggle("change");
-    }
-
-</script>
-<!-- ============= MENU ICON END// ============== -->
 </body>
 </html>
