--- a/contact-brm.html
+++ b/contact-brm.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>--BRM</title>
+<title>Connect with BRM</title>
 <link rel="icon" href="assets/logo/brm-ico.png" sizes="32x32" />
 
 <!-- Latest compiled and minified CSS -->
@@ -19,6 +19,18 @@
 <!-- local style sheet  -->
 <link rel="stylesheet" href="css/temp.css">
 
+<style>
+  /* footer bar fixed */
+  .footer {
+     position: fixed;
+     bottom: 0px;
+     height: 44px;
+     width: 100%;
+     overflow: hidden;
+     z-index: 99000;
+     background-color: #333;
+}
+</style>
             <!-- ============= JOTFORM =================== -->
             <!-- <script src="https://cdn03.jotfor.ms/static/prototype.forms.js?3.3.38911" type="text/javascript"></script> -->
             <!-- <script src="https://cdn01.jotfor.ms/static/jotform.forms.js?3.3.38911" type="text/javascript"></script> -->
@@ -44,7 +56,7 @@
 
 <!-- ============ BANNER ============= -->
 <div class="banner" id="top">
-  <div class="banner-bar"></div>
+  <!-- <div class="banner-bar"></div> -->
   <div class="container-fluid row">
     <div class="col-sm" id="bannerImg1">
       <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:210px" alt="BRM Contractors Inc">
@@ -117,7 +129,7 @@
     <div class="masthead-container">
       <h3>Connect with Us</h3>
       <h1>BRM Contractors</h1>
-      <h2>Total Service</h2>
+      <h2>Questions - We have answers .. Connect with BRM</h2>
       <a href="#contact-brm.html" class="btn-outline-red">FREE ESTIMATE</a>
       <div class="block-text">
         <p>Total home repair</p>
@@ -127,12 +139,12 @@
 
 
 <!-- ============= CONTENT =================== --> 
-      <div class="connect-container">
+      <div class="connect-container" style="padding-bottom: 300px;">
         <div class="connect-heading">
             <div class="connect-content">
-                <img class="img-thumbnail mx-auto-d-block" src="assets/logo/free-estimate.png" alt="BRM" style="width:200px;">
-                <h1>Connect with BRM</h1> 
-                <p class="text-red py-1">Leave us your information and a brief description of the services needed and we would be happy to get back with you.</p>    
+                <img class="rounded mx-auto-d-block" src="assets/logo/free-estimate.png" alt="BRM" style="width:200px;">
+                <h1 class="pt-5 py-1">Connect with BRM</h1> 
+                <p class="py-1">Leave us your information and a brief description of the services needed and we would be happy to get back with you.</p>    
             </div>
         </div>
         <div class="connect-form">
@@ -192,20 +204,12 @@
   <div class="container-fluid bg-dark">
     <div class="row justify-content-center">
       <div class="text-center">
-        <p class="py-2 h5 text-warning text-uppercase text-elite">Call today 724.787.3758</p>
+        <p class="py-3 h5 text-warning text-elite">Call 724.787.3758</p>
       </div>
     </div>
   </div>
 </footer>
 <!-- =========== FOOTER END/========== -->
-
-
-  
-
-
-
-
-
 
 <!-- local js  -->
 <script src="js/main.js"></script>
@@ -213,11 +217,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-
-
-
 
 </body>
 </html>
